syntax = "proto3";

package org.ggchess.proto.client_to_server;

message Msg {
  int32 id = 1;
  oneof c2s {
    NewGame new_game = 2;
    NewGameEventResponse new_game_event_response = 3;
  }
}

message NewGame {
  bytes receiver_user_id = 1;
  bytes variant_id = 2;
  string variant_version = 3;
}

message NewGameEventResponse {
  enum Answer {
    ACCEPT = 0;
    DECLINE = 1;
  }
  Answer answer = 1;
  optional bytes peer_id = 2;
}
